# mail-mcp

./: .env.example  .gitignore  README.md  generate_prompt.py  pyproject.toml
mail_mcp/: backends.py  demo_data.py  parser.py  server.py
mail_mcp/backends/: __init__.py  demo.py  himalaya.py  imap.py
src/mail_mcp/: backend.py  backend_imap.py  server.py
tests/: imap_smoke.py  spike_client.py
