[project]
name = "mail-mcp"
version = "0.1.0"
description = "A small, read-and-organize-only mail MCP server for Hermes."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",   # MCP server framework: provides FastMCP + stdio transport
]
# The IMAP backend uses only the standard library (imaplib, email) -- no extra
# dependencies are needed to talk to a real account.

[project.optional-dependencies]
dev = ["python-dotenv>=1.0"]   # convenience only, for loading .env standalone

[project.scripts]
# Lets Hermes launch the server as a single command:
#   command: "/abs/path/to/.venv/bin/mail-mcp"
mail-mcp = "mail_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
