[project]
name = "mail-mcp"
version = "0.1.0"
description = "IMAP mail MCP server for hermes-agent: inbox sorting (spoon-fed or sampling-driven) and general mailbox tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
mail-mcp = "mail_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_mcp"]
